--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>my first git hub</title>
 </head>
 <body>
+    <h1>i know how to code</h1>
+    <h2>I have changed the cursor</h2>
+    <h3>New code changed</h3>
     
 </body>
 </html>
