--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h2>I have changed the cursor</h2>
     <h3>New code changed</h3>
     <h4>this is the new line </h4>
+    <img src="/b1.jpg" alt="">
 
     
 </body>
